--- a/HotelWebsite/app/views/layouts/application.html.erb
+++ b/HotelWebsite/app/views/layouts/application.html.erb
@@ -9,6 +9,62 @@
   </head>
 
   <body>
-    <%= yield %>
+
+    <div class="brand">Hotel "Mir"</div>
+    <div class="address-bar">31 Mickiewicz st. | Rivne, UA</div>
+
+    <!-- Navigation -->
+    <nav class="navbar navbar-default" role="navigation">
+        <div class="container">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <!-- navbar-brand is hidden on larger screens, but visible when the menu is collapsed -->
+                <a class="navbar-brand" href="index.html">Business Casual</a>
+            </div>
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav">
+                    <li>
+                        <%= link_to 'Home', root_path %>
+                    </li>
+                    <li>
+                        <%= link_to 'Services', services_path %>
+                    </li>
+                    <li>
+                        <%= link_to 'Rooms', rooms_path %>
+                    </li>
+                    <li>
+                        <%= link_to 'Restaurant', restaurant_path %>
+                    </li>
+                    <li>
+                        <%= link_to 'contacts', contacts_path %>
+                    </li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container -->
+    </nav>
+
+    <div class="container">
+      <%= yield %>
+    </div>
+
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <p>Copyright &copy; Your Website 2014</p>
+                </div>
+            </div>
+        </div>
+    </footer>
+
   </body>
 </html>
