--- a/HotelWebsite/app/views/pages/index.html.erb
+++ b/HotelWebsite/app/views/pages/index.html.erb
@@ -1,1 +1,64 @@
-<h1>Welcome to the best hotel in the <em>world</em>!</h1>
+<div class="row">
+    <div class="box">
+        <div class="col-lg-12 text-center">
+            <div id="carousel-example-generic" class="carousel slide">
+                <!-- Indicators -->
+                <ol class="carousel-indicators hidden-xs">
+                    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+                    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+                    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+                    <li data-target="#carousel-example-generic" data-slide-to="3"></li>
+                    <li data-target="#carousel-example-generic" data-slide-to="4"></li>
+                    <li data-target="#carousel-example-generic" data-slide-to="5"></li>
+                </ol>
+
+                <!-- Wrapper for slides -->
+                <div class="carousel-inner">
+                    <div class="item active">
+                        <img class="img-responsive img-full" src="assets/slide-1.jpg" alt="">
+                    </div>
+                    <div class="item">
+                        <img class="img-responsive img-full" src="assets/slide-2.jpg" alt="">
+                    </div>
+                    <div class="item">
+                        <img class="img-responsive img-full" src="assets/slide-3.jpg" alt="">
+                    </div>
+                    <div class="item">
+                        <img class="img-responsive img-full" src="assets/slide-4.jpg" alt="">
+                    </div>
+                    <div class="item">
+                        <img class="img-responsive img-full" src="assets/slide-5.jpg" alt="">
+                    </div>
+                    <div class="item">
+                        <img class="img-responsive img-full" src="assets/slide-6.jpg" alt="">
+                    </div>
+                </div>
+
+                <!-- Controls -->
+                <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
+                    <span class="icon-prev"></span>
+                </a>
+                <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
+                    <span class="icon-next"></span>
+                </a>
+            </div>
+            <h2 class="brand-before">
+                <small>Welcome to</small>
+            </h2>
+            <h1 class="brand-name">Hotel "Mir"</h1>
+        </div>
+    </div>
+</div>
+
+<div class="row">
+    <div class="box">
+        <div class="col-lg-12">
+            <hr>
+            <h2 class="intro-text text-center">Hotel in the city Rivne</h2>
+            <hr>
+            <img class="img-responsive img-border img-left" src="assets/intro-pic.jpg" alt="">
+            <hr class="visible-xs">
+            <p>Updated hotel "Mir" - the standard of European quality and elegance in Rivne. Comfortable luxury, half-luxury and economy appartments suits for any customer. Rooms are equipped with free internet access (Wi-Fi), electronic safety system and mini-safe. The hotel also full time room service, restaurant, parking and will satisfy all the needs of visitors and help in the development of the business people who come to the Rivne city on a business trip, or people who came just to rest. Welcome to our hotel!</p>
+        </div>
+    </div>
+</div>
