Add description of all apartments

--- a/HotelWebsite/app/views/rooms/double_halfluxury.html.erb
+++ b/HotelWebsite/app/views/rooms/double_halfluxury.html.erb
@@ -1,2 +1,45 @@
-<h1>Rooms#double_halfluxury</h1>
-<p>Find me in app/views/rooms/double_halfluxury.html.erb</p>
+<div class="row">
+	<div class="box">
+		<div class="col-lg-8 col-lg-offset-2">
+      <%= image_tag 'rooms/lux_2.jpg', class: 'img-responsive' %>
+      <p class="text-center">Modern comfortable apartment with seprated sleeping zone.</p>
+      <table class="table table-hover">
+        <tr>
+          <td>Area</td>
+          <td>35m<sup>2</sup></td>
+        </tr>
+        <tr>
+          <td>Bed</td>
+          <td>2 Single (90 х 200 sm)</td>
+        </tr>
+        <tr>
+          <td>Equipment</td>
+          <td>
+            <ul>
+              <li>TV</li>
+              <li>Fridge</li>
+              <li>Safe</li>
+              <li>Hairdryer</li>
+              <li>Shower</li>
+              <li>Wi-Fi Internet</li>
+              <li>Air conditioning</li>
+            </ul>
+          </td>
+        </tr>
+        <tr>
+          <td>The price includes</td>
+          <td>
+            <ul>
+              <li>Breakfast</li>
+              <li>Guarded car parking</li>
+            </ul>
+          </td>
+        </tr>
+        <tr>
+          <td>Price</td>
+          <td>950 hrn.</td>
+        </tr>
+      </table>
+		</div>
+	</div>
+</div>
