--- a/HotelWebsite/app/views/rooms/single_standart.html.erb
+++ b/HotelWebsite/app/views/rooms/single_standart.html.erb
@@ -10,7 +10,7 @@
         </tr>
         <tr>
           <td>Bed</td>
-          <td>Single (90 x 200 cm)</td>
+          <td>Single (90 x 200 sm)</td>
         </tr>
         <tr>
           <td>Equipment</td>
