--- a/HotelWebsite/app/views/rooms/single_standart_better.html.erb
+++ b/HotelWebsite/app/views/rooms/single_standart_better.html.erb
@@ -10,7 +10,7 @@
         </tr>
         <tr>
           <td>Bed</td>
-          <td>Single (120 х 200 см)</td>
+          <td>Single (120 х 200 sm)</td>
         </tr>
         <tr>
           <td>Equipment</td>
