--- a/HotelWebsite/app/views/rooms/double_standart.html.erb
+++ b/HotelWebsite/app/views/rooms/double_standart.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
 	<div class="box">
 		<div class="col-lg-8 col-lg-offset-2">
-      <%= image_tag 'rooms/st_1_better.jpg', class: 'img-responsive' %>
+      <%= image_tag 'rooms/st_2.jpg', class: 'img-responsive' %>
       <p class="text-center">Modern comfortable apartment.</p>
       <table class="table table-hover">
         <tr>
@@ -10,7 +10,7 @@
         </tr>
         <tr>
           <td>Bed</td>
-          <td>Single (120 х 200 см)</td>
+          <td>2 Single (90 х 200 sm)</td>
         </tr>
         <tr>
           <td>Equipment</td>
@@ -34,7 +34,7 @@
         </tr>
         <tr>
           <td>Price</td>
-          <td>590 hrn.</td>
+          <td>750 hrn.</td>
         </tr>
       </table>
 		</div>
