--- a/HotelWebsite/app/views/reservations/new.html.erb
+++ b/HotelWebsite/app/views/reservations/new.html.erb
@@ -15,7 +15,7 @@
         %>
         <%= f.date_select :arrival_date %>
         <%= f.date_select :departure_date %>
-        <%= f.submit "Reserve" %>
+        <p class="text-center"><%= f.submit "Reserve", class: 'btn btn-lg btn-primary' %></p>
       <% end %>
 		</div>
 	</div>
