--- a/HotelWebsite/app/views/rooms/luxury.html.erb
+++ b/HotelWebsite/app/views/rooms/luxury.html.erb
@@ -2,7 +2,7 @@
 	<div class="box">
 		<div class="col-lg-8 col-lg-offset-2">
       <%= image_tag 'rooms/lux.jpg', class: 'img-responsive' %>
-      <p class="text-center">Modern comfortable apartment with seprated sleeping zone.</p>
+      <p class="text-justify">Placed on the seventh and eighth floors, first-class "luxury" apartments from their windows open vast panorama of the city. A elegant design, executed in classical style, take you into the atmosphere of elegant luxury.</p>
       <table class="table table-hover">
         <tr>
           <td>Area</td>
