--- a/HotelWebsite/app/views/layouts/application.html.erb
+++ b/HotelWebsite/app/views/layouts/application.html.erb
@@ -46,8 +46,17 @@
                         <%= link_to 'Restaurant', restaurant_path %>
                     </li>
                     <li>
-                        <%= link_to 'contacts', contacts_path %>
+                        <%= link_to 'Reviews', contacts_path %>
                     </li>
+                    <% if user_signed_in? %>
+                      <li>
+                      <%= link_to('Logout', destroy_user_session_path, :method => :delete) %>
+                      </li>
+                    <% else %>
+                      <li>
+                      <%= link_to('Login', new_user_session_path)  %>
+                      </li>
+                    <% end %>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -55,15 +64,39 @@
         <!-- /.container -->
     </nav>
 
+    <div class="row">
+      <div class="col-md-6 col-md-offset-3">
+        <% if notice %>
+          <p class="alert alert-success alert-dismissible fade in">
+            <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+            <%= notice %>
+          </p>
+        <% end %>
+        <% if alert %>
+          <p class="alert alert-danger alert-dismissible fade in">
+            <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+            <%= alert %>
+          </p>
+        <% end %>
+      </div>
+    </div>
+
     <div class="container">
-      <%= yield %>
+      <div class="row">
+      	<div class="box">
+          <%= yield %>
+      	</div>
+      </div>
     </div>
 
     <footer>
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <p>Copyright &copy; hmlON 2016</p>
+                    <p>
+                      Copyright &copy; hmlON 2016 |
+                      <%= link_to 'Сontact us', contacts_path %>
+                    </p>
                 </div>
             </div>
         </div>
