Add user reference and validations to reservations

--- a/HotelWebsite/app/views/reservations/new.html.erb
+++ b/HotelWebsite/app/views/reservations/new.html.erb
@@ -13,8 +13,8 @@
                        Reservation::PAYMENT_TYPES.collect{ |t| [t.humanize, t] }
                      )
         %>
-        <%= f.date_select :arrival_date %>
-        <%= f.date_select :departure_date %>
+        <%= f.date_select :arrival_date, start_year: Date.current.year %>
+        <%= f.date_select :departure_date, start_year: Date.current.year %>
         <p class="text-center"><%= f.submit "Reserve", class: 'btn btn-lg btn-primary' %></p>
       <% end %>
 		</div>
