--- a/HotelWebsite/app/views/layouts/application.html.erb
+++ b/HotelWebsite/app/views/layouts/application.html.erb
@@ -67,13 +67,13 @@
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
         <% if notice %>
-          <p class="alert alert-success alert-dismissible fade in">
+          <p class="alert alert-success alert-dismissible fade in text-center">
             <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
             <%= notice %>
           </p>
         <% end %>
         <% if alert %>
-          <p class="alert alert-danger alert-dismissible fade in">
+          <p class="alert alert-danger alert-dismissible fade in text-center">
             <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
             <%= alert %>
           </p>
