--- a/HotelWebsite/app/views/layouts/application.html.erb
+++ b/HotelWebsite/app/views/layouts/application.html.erb
@@ -46,7 +46,7 @@
                         <%= link_to 'Restaurant', restaurant_path %>
                     </li>
                     <li>
-                        <%= link_to 'Reviews', contacts_path %>
+                        <%= link_to 'Reviews', reviews_path %>
                     </li>
                     <% if user_signed_in? %>
                       <li>
