--- a/HotelWebsite/app/views/reviews/_form.html.erb
+++ b/HotelWebsite/app/views/reviews/_form.html.erb
@@ -1,4 +1,4 @@
-<%= bootstrap_form_for(@review, layout: :horizontal) do |f| %>
+<%= bootstrap_form_for(@review, layout: :horizontal, remote: true) do |f| %>
   <% if @review.errors.any? %>
       <div id="error_explanation" class="alert alert-danger">
         <h2><%= pluralize(@review.errors.count, "error") %> prohibited this post from being saved:</h2>
