--- a/HotelWebsite/app/views/reviews/index.html.erb
+++ b/HotelWebsite/app/views/reviews/index.html.erb
@@ -5,7 +5,7 @@
 </div>
 
 <div class="box">
-  <div class="col-lg-8 col-lg-offset-2">
+  <div id="reviews" class="col-lg-8 col-lg-offset-2">
     <%= render @reviews %>
   </div>
 </div>
