--- a/HotelWebsite/app/views/pages/contacts.html.erb
+++ b/HotelWebsite/app/views/pages/contacts.html.erb
@@ -2,7 +2,7 @@
 	<div class="box">
 		<div class="col-lg-8 col-lg-offset-2">
       <hr>
-      	<h2 class="intro-text text-center">Contancs</h2>
+      	<h2 class="intro-text text-center">Contacts</h2>
       <hr>
       <p><strong>Adress:</strong> 31 Mickewicz st., Rivne, UA</p>
       <p><strong>Phones:</strong></p>
