--- a/HotelWebsite/app/views/pages/services.html.erb
+++ b/HotelWebsite/app/views/pages/services.html.erb
@@ -7,7 +7,7 @@
 		<h3>Free services:</h3>
 		<ul>
 			<li>Parking</li>
-			<li>Taxi/ambilance call</li>
+			<li>Taxi/ambulance call</li>
 			<li>Fax and copy services</li>
 			<li>booking tickets to the theater and cinema</li>
 		</ul>
