--- a/HotelWebsite/app/views/reservations/new.html.erb
+++ b/HotelWebsite/app/views/reservations/new.html.erb
@@ -13,6 +13,6 @@
     %>
     <%= f.date_select :arrival_date, start_year: Date.current.year %>
     <%= f.date_select :departure_date, start_year: Date.current.year %>
-    <p class="text-center"><%= f.submit "Reserve", class: 'btn btn-lg btn-primary' %></p>
+    <div class="text-center"><%= f.submit "Reserve", class: 'btn btn-lg btn-primary' %></div>
   <% end %>
 </div>
