--- a/HotelWebsite/app/assets/stylesheets/application.scss
+++ b/HotelWebsite/app/assets/stylesheets/application.scss
@@ -23,6 +23,14 @@
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800);
 @import url(http://fonts.googleapis.com/css?family=Josefin+Slab:100,300,400,600,700,100italic,300italic,400italic,600italic,700italic);
 
+.notifications {
+  position: fixed;
+  bottom: 10px;
+  left: 10px;
+  opacity: 0.9;
+  z-index: 100;  //some magical number
+}
+
 body {
     font-family: "Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
     background: image-url("bg.jpg") no-repeat center center fixed;
