--- a/HotelWebsite/app/views/devise/passwords/new.html.erb
+++ b/HotelWebsite/app/views/devise/passwords/new.html.erb
@@ -1,20 +1,18 @@
-<%= bootstrap_devise_error_messages! %>
-<div class="panel panel-default devise-bs">
-  <div class="panel-heading">
-    <h4><%= t('.forgot_your_password', default: 'Forgot your password?') %></h4>
-  </div>
-  <div class="panel-body">
-    <div class="alert alert-danger">
-      <%= devise_error_messages! %>
-    </div>
-    <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post, role: "form" }) do |f| %>
-      <div class="form-group">
-        <%= f.label :email %>
-        <%= f.email_field :email, autofocus: true, class: 'form-control' %>
-      </div>
+<div class="col-lg-6 col-lg-offset-3">
+  <h3 class="text-center">Forgot your password?</h3>
 
-      <%= f.submit t('.send_me_reset_password_instructions', default: 'Send me reset password instructions'), class: 'btn btn-primary' %>
-    <% end %>
-  </div>
+  <%= bootstrap_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }, layout: :horizontal) do |f| %>
+    <%= devise_error_messages! %>
+    <%= f.email_field :email, autofocus: true %>
+
+    <div class="actions">
+      <div class="text-center">
+        <%= f.submit "Send me reset password instructions", class: "btn btn-lg btn-primary" %>
+      </div>
+    </div>
+  <% end %>
+
+  <hr>
+
+  <%= render "devise/shared/links" %>
 </div>
-<%= render 'devise/shared/links' %>
