--- a/HotelWebsite/app/views/devise/registrations/new.html.erb
+++ b/HotelWebsite/app/views/devise/registrations/new.html.erb
@@ -1,36 +1,18 @@
-<div class="panel panel-default devise-bs">
-  <div class="panel-heading">
-    <h4><%= t('.sign_up', default: 'Sign up') %></h4>
-  </div>
-  <div class="panel-body">
-    <% if devise_error_messages!.present? %>
-      <div class="alert alert-danger">
-        <%= devise_error_messages! %>
-      </div>
-    <% end %>
-    <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { role: 'form' }) do |f| %>
-      <div class="form-group">
-        <%= f.label :email %>
-        <%= f.email_field :email, autofocus: true, class: 'form-control', required: true %>
-      </div>
-      <div class="form-group">
-        <%= f.label :password %>
-        <%= f.password_field :password, class: 'form-control', required: true %>
-      </div>
-      <div class="form-group">
-        <%= f.label :password_confirmation %>
-        <%= f.password_field :password_confirmation, class: 'form-control', required: true %>
-      </div>
-      <div class="form-group">
-        <%= f.label :phone %>
-        <%= f.phone_field :phone, class: 'form-control', required: true %>
-      </div>
-      <div class="form-group">
-        <%= f.label :name %>
-        <%= f.text_field :name, class: 'form-control', required: true %>
-      </div>
-      <%= f.submit t('.sign_up', default: 'Sign up'), class: 'btn btn-primary' %>
-    <% end %>
-  </div>
+<div class="col-lg-6 col-lg-offset-3">
+  <h3 class="text-center">Sign up</h3>
+
+  <%= bootstrap_form_for(resource, as: resource_name, url: registration_path(resource_name), layout: :horizontal) do |f| %>
+    <%= devise_error_messages! %>
+
+      <%= f.email_field :email, autofocus: true, required: true %>
+      <%= f.password_field :password, autocomplete: "off", help: "6 characters minimum", required: true %>
+      <%= f.password_field :password_confirmation, autocomplete: "off", required: true %>
+      <%= f.phone_field :phone, required: true %>
+      <%= f.text_field :name, required: true %>
+      <div class="text-center"><%= f.submit "Sign up" , class: 'btn btn-lg btn-primary'%></div>
+  <% end %>
+
+  <hr>
+
+  <%= render "devise/shared/links" %>
 </div>
-<%= render 'devise/shared/links' %>
