--- a/HotelWebsite/app/views/layouts/application.html.erb
+++ b/HotelWebsite/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <!-- navbar-brand is hidden on larger screens, but visible when the menu is collapsed -->
-                <a class="navbar-brand" href="index.html">Business Casual</a>
+                <a class="navbar-brand" href="index.html">Hotel "Mir"</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -54,7 +54,7 @@
                       </li>
                     <% else %>
                       <li>
-                      <%= link_to('Login', new_user_session_path)  %>
+                      <%= link_to('Sign in', new_user_session_path)  %>
                       </li>
                     <% end %>
                 </ul>
@@ -64,21 +64,19 @@
         <!-- /.container -->
     </nav>
 
-    <div class="row">
-      <div class="col-md-6 col-md-offset-3">
-        <% if notice %>
-          <p class="alert alert-success alert-dismissible fade in text-center">
-            <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
-            <%= notice %>
-          </p>
-        <% end %>
-        <% if alert %>
-          <p class="alert alert-danger alert-dismissible fade in text-center">
-            <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
-            <%= alert %>
-          </p>
-        <% end %>
-      </div>
+    <div class="notifications">
+      <% if notice %>
+        <p class="alert alert-success alert-dismissible fade in text-center">
+          <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+          <%= notice %>
+        </p>
+      <% end %>
+      <% if alert %>
+        <p class="alert alert-danger alert-dismissible fade in text-center">
+          <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+          <%= alert %>
+        </p>
+      <% end %>
     </div>
 
     <div class="container">
