--- a/HotelWebsite/app/views/pages/restaurant.html.erb
+++ b/HotelWebsite/app/views/pages/restaurant.html.erb
@@ -4,28 +4,38 @@
       <hr>
       	<h2 class="intro-text text-center">Restaurant</h2>
       <hr>
-      <p>European cuisine at the restaurant "Mir" will satisfy your need for a delicious breakfast (buffet breakfast and complex breakfest), lunch and elegant dinners. Participants of the event, held at the conference hall of the hotel, the services "Coffee Break" and "Banquet" are provided. Number of seats at tables - 50, buffet - 70, banquet - 70.</p>
+			<div class="row">
+				<div class="col-md-3">
+					<img class="img-responsive img-border img-left" src="assets/restaurant.jpg" alt="">
+				</div>
+				<p>European cuisine at the restaurant "Mir" will satisfy your need for a delicious breakfast (buffet breakfast and complex breakfest), lunch and elegant dinners. Participants of the event, held at the conference hall of the hotel, the services "Coffee Break" and "Banquet" are provided. Number of seats at tables - 50, buffet - 70, banquet - 70.</p>
+			</div>
 
-      <h3>Hours of work:</h3>
-      <ul>
-        <li>Breakfast: 7:30 - 10:30</li>
-        <li>Lunch, dinner: 11:30 - 22:00</li>
-        <li>Bar: 11:30 - 24:00</li>
-      </ul>
+			<div class="row">
+				<div class="col-md-6">
+					<h3>Hours of work:</h3>
+		      <ul>
+		        <li>Breakfast: 7:30 - 10:30</li>
+		        <li>Lunch, dinner: 11:30 - 22:00</li>
+		        <li>Bar: 11:30 - 24:00</li>
+		      </ul>
+					<p>
+						Restaurant <strong>doesn't</strong> work from 10:30 to 11:30</strong>
+					</p></div>
+				<div class="col-md-6">
+					<h3>Phones:</h3>
+					<ul>
+						<li>Bar: 0 (362) 60 90 24</li>
+						<li>Administrator: 0 (67) 363 11 57</li>
+					</ul>
+				</div>
+			</div>
 
-			<p>
-				Restaurant <strong>doesn't</strong> work from 10:30 to 11:30</strong>
-			</p>
 
-			<h3>Phones:</h3>
-			<ul>
-				<li>Bar: 0 (362) 60 90 24</li>
-				<li>Administrator: 0 (67) 363 11 57</li>
-			</ul>
 
 			<!-- TODO: move image to the RIGHT place -->
 			<!-- <div class="col-lg-8 col-lg-offset-2">  -->
-				<%= image_tag 'restaurant.jpg', class: 'img resposive img-full' %>
+				<!-- <%= image_tag 'restaurant.jpg', class: 'img resposive img-full' %> -->
 			<!-- </div> -->
 
 		</div>
