Add Computer math algorithms

--- a/Computer math algorithms/templates/index.html
+++ b/Computer math algorithms/templates/index.html
@@ -16,6 +16,9 @@
     <li><a href="/lab1">Lab 1: СЛАУ</a></li>
     <li><a href="/lab2">Lab 2: Интегрирование и дифференцирование</a></li>
     <li><a href="/lab3">Lab 3: Дифференциальные уравнения</a></li>
+    <li><a href="/lab4">Lab 4: TK</a></li>
+    <li><a href="/lab5">Lab 5: TK</a></li>
+    <li><a href="/lab6">Lab 6: TK</a></li>
   </ul>
 </body>
 </html>
