--- a/Computer math algorithms/templates/lab1.html
+++ b/Computer math algorithms/templates/lab1.html
@@ -19,7 +19,7 @@
   </style>
 </head>
 <body>
-  <h1>System of linear equations</h1>
+  <h1>Лабораторна работа №1: СЛАУ</h1>
   <p>Ax = b</p>
   {% if x.size > 0 %}
     <p>A = {{ A }}</p>
